--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Flask==2.3.3
+Werkzeug==2.3.7
 PyPDF2==3.0.1
 pdfplumber==0.9.0
 openpyxl==3.1.2
 Pillow==10.0.1
 pdf2image==1.17.0
+pandas==2.0.3
+Gunicorn==21.2.0
