--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ pdfplumber==0.9.0
 openpyxl==3.1.2
 Pillow>=10.2.0
 pdf2image==1.17.0
-pandas==2.0.3
+numpy>=1.21.0,<2.0
+pandas>=2.1.0
 Gunicorn==21.2.0
