🔒 Security & Deployment Improvements
✅ Security Enhancements:
- Remove hardcoded ComPDF API credentials from all config files
- Add .env.local support for secure local development
- Update .gitignore to protect sensitive files
- Reset .env to safe template values

🚀 Deployment Fixes:
- Fix Render deployment with proper system dependencies
- Improve build.sh with auto-detection for different environments
- Update render.yaml to use build script instead of inline commands
- Remove credentials from render.yaml (use Render env vars instead)

📋 Documentation & Tools:
- Add WARP.md with comprehensive project architecture guide
- Add SETUP.md with security-focused setup instructions
- Add start_local.sh script for easy local development
- Update .gitignore to protect .env.local and temp files

🛠️ Technical Improvements:
- Enhanced build.sh with better error handling
- Support for both apt-get and yum package managers
- Improved environment variable loading logic
- Better system dependency detection and reporting

This commit ensures secure credential management and fixes both local development and Render deployment issues.

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: python
     repo: https://github.com/nd-tung/chiaphong.git
     buildCommand: |
-      pip install --upgrade pip
-      pip install -r requirements.txt
+      chmod +x build.sh
+      ./build.sh
     startCommand: python web_server.py
     envVars:
       - key: PYTHON_VERSION
@@ -15,6 +15,8 @@ services:
           type: web
           name: chiaphong-web
           property: port
+      - key: FLASK_ENV
+        value: production
     scaling:
       minInstances: 1
       maxInstances: 3
